# internal/domain/model/add_building.go
@@ -1,7 +1,6 @@
 package model
 
-type Building struct {
-	ID     uint64 `json:"id"`
+type AddBuilding struct {
 	Name   string `json:"name" binding:"required"`
 	City   string `json:"city" binding:"required"`
 	Year   int    `json:"year"`
